--- a/Menu/Menu.less
+++ b/Menu/Menu.less
@@ -5,10 +5,9 @@
 }
 
 .menu {
-  display: none;
   position: fixed;
   top: 75px;
-  left: 0;
+  left: -350px;
   width: 350px;
   height: 100vh; /* This give the height 100% of the screen or, '100% of View Height' */
   background-color: #81C784;
@@ -16,6 +15,8 @@
   border-left: none;
   border-bottom: none;
   z-index: 2; /* This set the layer level of the element, it has precendence over initial level of 1*/
+  animation: menu-close 0.3s;
+  animation-timing-function: ease-in;
 }
 
 .menu ul li{
@@ -27,4 +28,25 @@
 
 .menu--open {
   display: block;
+  left: 0;
+  animation: menu-open 0.3s;
+  animation-timing-function: ease-out;
+}
+
+@keyframes menu-open {
+  0% {
+    left: -350px;
+  }
+  100% {
+    left: 0;
+  }
+}
+
+@keyframes menu-close {
+  0% {
+    left: 0;
+  }
+  100% {
+    left: -350px;
+  }
 }
