--- a/css/index.css
+++ b/css/index.css
@@ -41,10 +41,9 @@
   cursor: pointer;
 }
 .menu {
-  display: none;
   position: fixed;
   top: 75px;
-  left: 0;
+  left: -350px;
   width: 350px;
   height: 100vh;
   /* This give the height 100% of the screen or, '100% of View Height' */
@@ -54,6 +53,8 @@
   border-bottom: none;
   z-index: 2;
   /* This set the layer level of the element, it has precendence over initial level of 1*/
+  animation: menu-close 0.3s;
+  animation-timing-function: ease-in;
 }
 .menu ul li {
   list-style-type: none;
@@ -63,6 +64,25 @@
 }
 .menu--open {
   display: block;
+  left: 0;
+  animation: menu-open 0.3s;
+  animation-timing-function: ease-out;
+}
+@keyframes menu-open {
+  0% {
+    left: -350px;
+  }
+  100% {
+    left: 0;
+  }
+}
+@keyframes menu-close {
+  0% {
+    left: 0;
+  }
+  100% {
+    left: -350px;
+  }
 }
 .articles {
   margin-top: 95px;
